@@ -1,0 +1,36 @@
+[buildout]
+extends =
+    http://svn.plone.org/svn/collective/buildout/plonetest/test-4.x.cfg
+
+extensions =
+    mr.developer
+
+sources = sources
+auto-checkout = *
+always-checkout = force
+sources-dir = extras
+github-url = https://github.com/
+
+package-name = collective.geo.mapwidget
+package-extras = [test]
+test-eggs =
+
+# avoid timeouts by downloading only from known hosts
+allow-hosts =
+    *.plone.org
+    *.python.org
+    *.zope.org
+    docutils.sourceforge.net
+    effbot.org
+    prdownloads.sourceforge.net
+
+
+
+[versions]
+zc.buildout = 1.6.3
+
+[sources]
+collective.geo.geographer = git ${buildout:github-url}collective/collective.geo.geographer.git
+collective.geo.openlayers = git ${buildout:github-url}collective/collective.geo.openlayers.git
+collective.geo.settings = git ${buildout:github-url}collective/collective.geo.settings.git
+collective.z3cform.colorpicker = git ${buildout:github-url}gborelli/collective.z3cform.colorpicker.git
